[tool.poetry]
package-mode = false
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "src"}]

# Add your own dependencies here using "poetry add [dependency_name]"
[tool.poetry.dependencies]
python = ">=3.12,<3.14"

# Install Docs dependencies "poetry install --with docs"
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
